Fix overflow styling

--- a/src/app/companies/[organizatrionId]/OrganizationsPage.module.scss
+++ b/src/app/companies/[organizatrionId]/OrganizationsPage.module.scss
@@ -4,7 +4,8 @@
     margin: 0 auto;
     padding: 20px;
     width: 100%;
-
+    overflow-y: auto;
+    max-height: 100%;
     .container {
         width: 640px;
         height: 100%;
@@ -14,6 +15,11 @@
             position: absolute;
             top: 4px;
             left: -64px;
+            @media (max-width: 1100px) {
+                right: 0;
+                left: auto;
+                top: -40px;
+            }
         }
     }
 }
