--- a/src/app/companies/[organizatrionId]/photos/Photos.module.scss
+++ b/src/app/companies/[organizatrionId]/photos/Photos.module.scss
@@ -1,4 +1,5 @@
 .container {
+    margin-bottom: 20px;
     .header {
         display: flex;
         justify-content: space-between;
